# tehran-house-price

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Makefile  README.md  docker-compose.observability.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker.yml
configs/: base.yaml  logging.yaml
docs/: phase_0_project_setup.md  phase_1_data_layer.md  phase_2_ml_pipeline.md  phase_3_api.md  phase_4_docker.md  phase_5_mlflow.md  phase_6_cicd.md  phase_7_observability.md  phase_8_deployment.md
src/tehran_house_price/: __init__.py  settings.py
src/tehran_house_price/api/: __init__.py  __main__.py  app.py  bootstrap.py  dependencies.py  errors.py  health.py  metrics.py  middleware.py  model_loader.py  run.py  schemas.py
src/tehran_house_price/data/: build_dataset.py  clean.py  constants.py  ingest_kaggle.py  schema.py  validate.py
src/tehran_house_price/features/: build_features.py  constants.py  transformers.py
src/tehran_house_price/models/: baseline.py  evaluation.py  split.py  train.py  train_pipeline.py
src/tehran_house_price/monitoring/: prediction_logger.py  schemas.py
src/tehran_house_price/tracking/: __init__.py  mlflow_setup.py  registry.py  run_logger.py
src/tehran_house_price/utils/: logger.py  paths.py
tests/integration/: test_api_e2e.py  test_build_dataset.py  test_observability_api.py  test_train_pipeline.py
tests/unit/: __init__.py  test_api_endpoints.py  test_api_errors.py  test_api_health.py  test_api_metrics.py  test_api_middleware.py  test_api_schemas.py  test_baseline.py  test_bootstrap.py  test_build_features.py  test_clean.py  test_evaluation.py  test_ingest_kaggle.py  test_logger.py  test_mlflow_setup.py  test_model_loader.py  test_prediction_logger.py  test_run_logger.py  test_schema.py  test_smoke.py  test_split.py  test_train.py  test_transformers.py  test_validate.py
